--- a/fronted/index.html
+++ b/fronted/index.html
@@ -2,11 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg+xml" href="./public/logo.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.jpg" />
+
+    <!-- Mobile Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./src//index.css" rel="stylesheet">
-    <title>Saheed Udham Singh Rakt Sewa Trust</title>
+
+    <!-- SEO Title -->
+    <title>
+      SUSRS Trust | Blood Donation & Social Welfare NGO in India
+    </title>
+
+    <!-- SEO Description -->
+    <meta
+      name="description"
+      content="Saheed Udham Singh Rakt Sewa Trust (SUSRS Trust) is a registered NGO in India working for blood donation, social welfare and helping needy people."
+    />
+
+    <!-- SEO Keywords -->
+    <meta
+      name="keywords"
+      content="NGO in India, Blood Donation NGO, Blood Help NGO, SUSRS Trust, Saheed Udham Singh Rakt Sewa Trust, donate blood NGO"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="SUSRS Trust" />
+
+    <!-- Open Graph (Facebook / WhatsApp) -->
+    <meta property="og:title" content="SUSRS Trust - Blood Donation NGO in India" />
+    <meta
+      property="og:description"
+      content="Blood donation & social welfare NGO in India. Join SUSRS Trust to save lives."
+    />
+    <meta property="og:image" content="https://susrstrust.in/logo.jpg" />
+    <meta property="og:url" content="https://susrstrust.in" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SUSRS Trust - NGO in India" />
+    <meta
+      name="twitter:description"
+      content="Saheed Udham Singh Rakt Sewa Trust works for blood donation and social welfare in India."
+    />
+    <meta name="twitter:image" content="https://susrstrust.in/logo.jpg" />
+
+    <!-- CSS -->
+    <link href="/src/index.css" rel="stylesheet" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
