update slider image

--- a/fronted/index.html
+++ b/fronted/index.html
@@ -36,7 +36,7 @@
       content="Blood donation & social welfare NGO in India. Join SUSRS Trust to save lives."
     />
     <meta property="og:image" content="https://susrstrust.in/logo.jpg" />
-    <meta property="og:url" content="https://susrstrust.in" />
+    <meta property="og:url" content="https://susrstrust.in/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
